geolog-lang/test/mathieu.output
-- tokens
Decl theory (0:6)
AIdent MathieuTemplate (7:22)
SKeyword := (23:25)
Block sig (26:29)
Nl (29:30)
AIdent Point (32:37)
SKeyword : (38:39)
AKeyword Set (40:43)
Nl (43:44)
AIdent Quad (46:50)
SKeyword : (51:52)
AKeyword Set (53:56)
Nl (59:98)
AIdent q0 (126:128)
SKeyword : (129:130)
AIdent Quad (131:135)
SKeyword -> (136:138)
AIdent Point (139:144)
Nl (144:145)
AIdent q1 (147:149)
SKeyword : (150:151)
AIdent Quad (152:156)
SKeyword -> (157:159)
AIdent Point (160:165)
Nl (165:166)
AIdent q2 (168:170)
SKeyword : (171:172)
AIdent Quad (173:177)
SKeyword -> (178:180)
AIdent Point (181:186)
Nl (186:187)
AIdent q3 (189:191)
SKeyword : (192:193)
AIdent Quad (194:198)
SKeyword -> (199:201)
AIdent Point (202:207)
Nl (207:208)
Nl (208:209)
AIdent act (228:231)
SKeyword : (232:233)
AIdent Quad (234:238)
SKeyword -> (239:241)
AIdent Point (242:247)
SKeyword -> (248:250)
AIdent Point (251:256)
Nl (256:257)
Nl (257:258)
AIdent mul (285:288)
SKeyword : (289:290)
AIdent Quad (291:295)
SKeyword -> (296:298)
AIdent Quad (299:303)
SKeyword -> (304:306)
AIdent Quad (307:311)
Nl (311:312)
Nl (312:313)
AIdent base0 (387:392)
SKeyword : (393:394)
AIdent Point (395:400)
Nl (400:401)
AIdent base1 (403:408)
SKeyword : (409:410)
AIdent Point (411:416)
Nl (416:417)
AIdent base2 (419:424)
SKeyword : (425:426)
AIdent Point (427:432)
Nl (432:433)
AIdent base3 (435:440)
SKeyword : (441:442)
AIdent Point (443:448)
Nl (448:449)
Nl (449:450)
Nl (452:470)
AIdent make_quad (472:481)
SKeyword : (481:482)
AIdent Point (483:488)
SKeyword -> (489:491)
AIdent Point (492:497)
SKeyword -> (498:500)
AIdent Point (501:506)
SKeyword -> (507:509)
AIdent Point (510:515)
SKeyword -> (516:518)
AIdent Quad (519:523)
Nl (523:524)
Nl (524:525)
AIdent ax/quad_gen (594:605)
SKeyword : (606:607)
LParen (608:609)
AIdent a (609:610)
SKeyword : (611:612)
AIdent Point (613:618)
RParen (618:619)
SKeyword -> (620:622)
LParen (623:624)
AIdent b (624:625)
SKeyword : (626:627)
AIdent Point (628:633)
RParen (633:634)
SKeyword -> (635:637)
LParen (638:639)
AIdent c (639:640)
SKeyword : (641:642)
AIdent Point (643:648)
RParen (648:649)
SKeyword -> (650:652)
LParen (653:654)
AIdent d (654:655)
SKeyword : (656:657)
AIdent Point (658:663)
RParen (663:664)
SKeyword -> (665:667)
LParen (668:669)
Nl (669:670)
LParen (674:675)
AIdent a (675:676)
SKeyword = (677:678)
AIdent b (679:680)
RParen (680:681)
SIdent / (682:684)
LParen (685:686)
AIdent b (686:687)
SKeyword = (688:689)
AIdent c (690:691)
RParen (691:692)
SIdent / (693:695)
LParen (696:697)
AIdent a (697:698)
SKeyword = (699:700)
AIdent c (701:702)
RParen (702:703)
SIdent / (704:706)
LParen (707:708)
AIdent a (708:709)
SKeyword = (710:711)
AIdent d (712:713)
RParen (713:714)
SIdent / (715:717)
LParen (718:719)
AIdent b (719:720)
SKeyword = (721:722)
AIdent d (723:724)
RParen (724:725)
SIdent / (726:728)
LParen (729:730)
AIdent c (730:731)
SKeyword = (732:733)
AIdent d (734:735)
RParen (735:736)
SIdent / (737:739)
LParen (740:741)
Nl (741:742)
LParen (748:749)
AIdent q0 (749:751)
LParen (752:753)
AIdent make_quad (753:762)
AIdent a (763:764)
AIdent b (765:766)
AIdent c (767:768)
AIdent d (769:770)
RParen (770:771)
SKeyword = (772:773)
AIdent a (774:775)
RParen (775:776)
SIdent / (777:778)
Nl (780:781)
LParen (787:788)
AIdent q1 (788:790)
LParen (791:792)
AIdent make_quad (792:801)
AIdent a (802:803)
AIdent b (804:805)
AIdent c (806:807)
AIdent d (808:809)
RParen (809:810)
SKeyword = (811:812)
AIdent b (813:814)
RParen (814:815)
SIdent / (816:817)
Nl (819:820)
LParen (826:827)
AIdent q2 (827:829)
LParen (830:831)
AIdent make_quad (831:840)
AIdent a (841:842)
AIdent b (843:844)
AIdent c (845:846)
AIdent d (847:848)
RParen (848:849)
SKeyword = (850:851)
AIdent c (852:853)
RParen (853:854)
SIdent / (855:856)
Nl (856:858)
LParen (864:865)
AIdent q3 (865:867)
LParen (868:869)
AIdent make_quad (869:878)
AIdent a (879:880)
AIdent b (881:882)
AIdent c (883:884)
AIdent d (885:886)
RParen (886:887)
SKeyword = (888:889)
AIdent d (890:891)
RParen (891:892)
Nl (892:893)
RParen (897:898)
Nl (898:899)
RParen (901:902)
Nl (902:903)
Nl (903:904)
AIdent ax/sharp (906:914)
SKeyword : (915:916)
LParen (917:918)
AIdent q (918:919)
SKeyword : (920:921)
AIdent Quad (922:926)
RParen (926:927)
SKeyword -> (928:930)
AIdent q (931:932)
SKeyword = (933:934)
AIdent make_quad (935:944)
LParen (945:946)
AIdent q0 (946:948)
AIdent q (949:950)
RParen (950:951)
LParen (952:953)
AIdent q1 (953:955)
AIdent q (956:957)
RParen (957:958)
LParen (959:960)
AIdent q2 (960:962)
AIdent q (963:964)
RParen (964:965)
LParen (966:967)
AIdent q3 (967:969)
AIdent q (970:971)
RParen (971:972)
Nl (972:973)
Nl (973:974)
AIdent ax/quad_acts_basepoints (1032:1055)
SKeyword : (1056:1057)
LParen (1058:1059)
AIdent q (1059:1060)
SKeyword : (1061:1062)
AIdent Quad (1063:1067)
RParen (1067:1068)
SKeyword -> (1069:1071)
LParen (1072:1073)
AIdent b (1073:1074)
SKeyword : (1075:1076)
AIdent Point (1077:1082)
RParen (1082:1083)
SKeyword -> (1084:1086)
LParen (1087:1088)
Nl (1088:1089)
LParen (1093:1094)
AIdent act (1094:1097)
AIdent q (1098:1099)
AIdent base0 (1100:1105)
SKeyword = (1106:1107)
AIdent q0 (1108:1110)
AIdent q (1111:1112)
RParen (1112:1113)
SIdent / (1114:1115)
Nl (1115:1117)
LParen (1121:1122)
AIdent act (1122:1125)
AIdent q (1126:1127)
AIdent base1 (1128:1133)
SKeyword = (1134:1135)
AIdent q1 (1136:1138)
AIdent q (1139:1140)
RParen (1140:1141)
SIdent / (1142:1143)
Nl (1143:1145)
LParen (1149:1150)
AIdent act (1150:1153)
AIdent q (1154:1155)
AIdent base2 (1156:1161)
SKeyword = (1162:1163)
AIdent q2 (1164:1166)
AIdent q (1167:1168)
RParen (1168:1169)
SIdent / (1170:1171)
Nl (1171:1173)
LParen (1177:1178)
AIdent act (1178:1181)
AIdent q (1182:1183)
AIdent base3 (1184:1189)
SKeyword = (1190:1191)
AIdent q3 (1192:1194)
AIdent q (1195:1196)
RParen (1196:1197)
Nl (1197:1198)
RParen (1200:1201)
Nl (1201:1202)
Nl (1202:1203)
AIdent ax/act_mul (1240:1250)
SKeyword : (1251:1252)
LParen (1253:1254)
AIdent q (1254:1255)
SKeyword : (1256:1257)
AIdent Quad (1258:1262)
RParen (1262:1263)
SKeyword -> (1264:1266)
LParen (1267:1268)
AIdent r (1268:1269)
SKeyword : (1270:1271)
AIdent Quad (1272:1276)
RParen (1276:1277)
SKeyword -> (1278:1280)
AIdent p (1281:1282)
SKeyword : (1283:1284)
AIdent Point (1285:1290)
SKeyword -> (1291:1293)
AIdent act (1294:1297)
LParen (1298:1299)
AIdent mul (1299:1302)
AIdent q (1303:1304)
AIdent r (1305:1306)
RParen (1306:1307)
AIdent p (1308:1309)
SKeyword = (1310:1311)
AIdent act (1312:1315)
AIdent q (1316:1317)
LParen (1318:1319)
AIdent act (1319:1322)
AIdent r (1323:1324)
AIdent p (1325:1326)
RParen (1326:1327)
Nl (1327:1328)
Nl (1328:1329)
AIdent ax/mul_assoc (1367:1379)
SKeyword : (1380:1381)
LParen (1382:1383)
AIdent q (1383:1384)
SKeyword : (1385:1386)
AIdent Quad (1387:1391)
RParen (1391:1392)
SKeyword -> (1393:1395)
LParen (1396:1397)
AIdent r (1397:1398)
SKeyword : (1399:1400)
AIdent Quad (1401:1405)
RParen (1405:1406)
SKeyword -> (1407:1409)
LParen (1410:1411)
AIdent s (1411:1412)
SKeyword : (1413:1414)
AIdent Quad (1415:1419)
RParen (1419:1420)
SKeyword -> (1421:1423)
AIdent mul (1424:1427)
LParen (1428:1429)
AIdent mul (1429:1432)
AIdent q (1433:1434)
AIdent r (1435:1436)
RParen (1436:1437)
AIdent s (1438:1439)
SKeyword = (1441:1442)
AIdent mul (1443:1446)
AIdent q (1447:1448)
LParen (1449:1450)
AIdent mul (1450:1453)
AIdent r (1454:1455)
AIdent s (1456:1457)
RParen (1457:1458)
Nl (1458:1459)
Nl (1459:1460)
End end (1460:1463)
Nl (1463:1464)
Nl (1464:1465)
Nl (1465:1836)
Eof (1836:1836)

-- notation
Decl theory (0:1463)
  Infix (7:1463)
    Ident MathieuTemplate (7:22)
    Keyword := (23:25)
    Block sig (26:1463)
      Infix (32:43)
        Ident Point (32:37)
        Keyword : (38:39)
        Keyword Set (40:43)
      Infix (46:56)
        Ident Quad (46:50)
        Keyword : (51:52)
        Keyword Set (53:56)
      Infix (126:144)
        Ident q0 (126:128)
        Keyword : (129:130)
        Infix (131:144)
          Ident Quad (131:135)
          Keyword -> (136:138)
          Ident Point (139:144)
      Infix (147:165)
        Ident q1 (147:149)
        Keyword : (150:151)
        Infix (152:165)
          Ident Quad (152:156)
          Keyword -> (157:159)
          Ident Point (160:165)
      Infix (168:186)
        Ident q2 (168:170)
        Keyword : (171:172)
        Infix (173:186)
          Ident Quad (173:177)
          Keyword -> (178:180)
          Ident Point (181:186)
      Infix (189:207)
        Ident q3 (189:191)
        Keyword : (192:193)
        Infix (194:207)
          Ident Quad (194:198)
          Keyword -> (199:201)
          Ident Point (202:207)
      Infix (228:256)
        Ident act (228:231)
        Keyword : (232:233)
        Infix (234:256)
          Ident Quad (234:238)
          Keyword -> (239:241)
          Infix (242:256)
            Ident Point (242:247)
            Keyword -> (248:250)
            Ident Point (251:256)
      Infix (285:311)
        Ident mul (285:288)
        Keyword : (289:290)
        Infix (291:311)
          Ident Quad (291:295)
          Keyword -> (296:298)
          Infix (299:311)
            Ident Quad (299:303)
            Keyword -> (304:306)
            Ident Quad (307:311)
      Infix (387:400)
        Ident base0 (387:392)
        Keyword : (393:394)
        Ident Point (395:400)
      Infix (403:416)
        Ident base1 (403:408)
        Keyword : (409:410)
        Ident Point (411:416)
      Infix (419:432)
        Ident base2 (419:424)
        Keyword : (425:426)
        Ident Point (427:432)
      Infix (435:448)
        Ident base3 (435:440)
        Keyword : (441:442)
        Ident Point (443:448)
      Infix (472:523)
        Ident make_quad (472:481)
        Keyword : (481:482)
        Infix (483:523)
          Ident Point (483:488)
          Keyword -> (489:491)
          Infix (492:523)
            Ident Point (492:497)
            Keyword -> (498:500)
            Infix (501:523)
              Ident Point (501:506)
              Keyword -> (507:509)
              Infix (510:523)
                Ident Point (510:515)
                Keyword -> (516:518)
                Ident Quad (519:523)
      Infix (594:891)
        Ident ax/quad_gen (594:605)
        Keyword : (606:607)
        Infix (609:891)
          Infix (609:618)
            Ident a (609:610)
            Keyword : (611:612)
            Ident Point (613:618)
          Keyword -> (620:622)
          Infix (624:891)
            Infix (624:633)
              Ident b (624:625)
              Keyword : (626:627)
              Ident Point (628:633)
            Keyword -> (635:637)
            Infix (639:891)
              Infix (639:648)
                Ident c (639:640)
                Keyword : (641:642)
                Ident Point (643:648)
              Keyword -> (650:652)
              Infix (654:891)
                Infix (654:663)
                  Ident d (654:655)
                  Keyword : (656:657)
                  Ident Point (658:663)
                Keyword -> (665:667)
                Infix (675:891)
                  Infix (675:735)
                    Infix (675:724)
                      Infix (675:713)
                        Infix (675:702)
                          Infix (675:691)
                            Infix (675:680)
                              Ident a (675:676)
                              Keyword = (677:678)
                              Ident b (679:680)
                            Ident / (682:684)
                            Infix (686:691)
                              Ident b (686:687)
                              Keyword = (688:689)
                              Ident c (690:691)
                          Ident / (693:695)
                          Infix (697:702)
                            Ident a (697:698)
                            Keyword = (699:700)
                            Ident c (701:702)
                        Ident / (704:706)
                        Infix (708:713)
                          Ident a (708:709)
                          Keyword = (710:711)
                          Ident d (712:713)
                      Ident / (715:717)
                      Infix (719:724)
                        Ident b (719:720)
                        Keyword = (721:722)
                        Ident d (723:724)
                    Ident / (726:728)
                    Infix (730:735)
                      Ident c (730:731)
                      Keyword = (732:733)
                      Ident d (734:735)
                  Ident / (737:739)
                  Infix (749:891)
                    Infix (749:853)
                      Infix (749:814)
                        Infix (749:775)
                          App (749:770)
                            Ident q0 (749:751)
                            App (753:770)
                              Ident make_quad (753:762)
                              Ident a (763:764)
                              Ident b (765:766)
                              Ident c (767:768)
                              Ident d (769:770)
                          Keyword = (772:773)
                          Ident a (774:775)
                        Ident / (777:778)
                        Infix (788:814)
                          App (788:809)
                            Ident q1 (788:790)
                            App (792:809)
                              Ident make_quad (792:801)
                              Ident a (802:803)
                              Ident b (804:805)
                              Ident c (806:807)
                              Ident d (808:809)
                          Keyword = (811:812)
                          Ident b (813:814)
                      Ident / (816:817)
                      Infix (827:853)
                        App (827:848)
                          Ident q2 (827:829)
                          App (831:848)
                            Ident make_quad (831:840)
                            Ident a (841:842)
                            Ident b (843:844)
                            Ident c (845:846)
                            Ident d (847:848)
                        Keyword = (850:851)
                        Ident c (852:853)
                    Ident / (855:856)
                    Infix (865:891)
                      App (865:886)
                        Ident q3 (865:867)
                        App (869:886)
                          Ident make_quad (869:878)
                          Ident a (879:880)
                          Ident b (881:882)
                          Ident c (883:884)
                          Ident d (885:886)
                      Keyword = (888:889)
                      Ident d (890:891)
      Infix (906:971)
        Ident ax/sharp (906:914)
        Keyword : (915:916)
        Infix (918:971)
          Infix (918:926)
            Ident q (918:919)
            Keyword : (920:921)
            Ident Quad (922:926)
          Keyword -> (928:930)
          Infix (931:971)
            Ident q (931:932)
            Keyword = (933:934)
            App (935:971)
              Ident make_quad (935:944)
              App (946:950)
                Ident q0 (946:948)
                Ident q (949:950)
              App (953:957)
                Ident q1 (953:955)
                Ident q (956:957)
              App (960:964)
                Ident q2 (960:962)
                Ident q (963:964)
              App (967:971)
                Ident q3 (967:969)
                Ident q (970:971)
      Infix (1032:1196)
        Ident ax/quad_acts_basepoints (1032:1055)
        Keyword : (1056:1057)
        Infix (1059:1196)
          Infix (1059:1067)
            Ident q (1059:1060)
            Keyword : (1061:1062)
            Ident Quad (1063:1067)
          Keyword -> (1069:1071)
          Infix (1073:1196)
            Infix (1073:1082)
              Ident b (1073:1074)
              Keyword : (1075:1076)
              Ident Point (1077:1082)
            Keyword -> (1084:1086)
            Infix (1094:1196)
              Infix (1094:1168)
                Infix (1094:1140)
                  Infix (1094:1112)
                    App (1094:1105)
                      Ident act (1094:1097)
                      Ident q (1098:1099)
                      Ident base0 (1100:1105)
                    Keyword = (1106:1107)
                    App (1108:1112)
                      Ident q0 (1108:1110)
                      Ident q (1111:1112)
                  Ident / (1114:1115)
                  Infix (1122:1140)
                    App (1122:1133)
                      Ident act (1122:1125)
                      Ident q (1126:1127)
                      Ident base1 (1128:1133)
                    Keyword = (1134:1135)
                    App (1136:1140)
                      Ident q1 (1136:1138)
                      Ident q (1139:1140)
                Ident / (1142:1143)
                Infix (1150:1168)
                  App (1150:1161)
                    Ident act (1150:1153)
                    Ident q (1154:1155)
                    Ident base2 (1156:1161)
                  Keyword = (1162:1163)
                  App (1164:1168)
                    Ident q2 (1164:1166)
                    Ident q (1167:1168)
              Ident / (1170:1171)
              Infix (1178:1196)
                App (1178:1189)
                  Ident act (1178:1181)
                  Ident q (1182:1183)
                  Ident base3 (1184:1189)
                Keyword = (1190:1191)
                App (1192:1196)
                  Ident q3 (1192:1194)
                  Ident q (1195:1196)
      Infix (1240:1326)
        Infix (1240:1282)
          Ident ax/act_mul (1240:1250)
          Keyword : (1251:1252)
          Infix (1254:1282)
            Infix (1254:1262)
              Ident q (1254:1255)
              Keyword : (1256:1257)
              Ident Quad (1258:1262)
            Keyword -> (1264:1266)
            Infix (1268:1282)
              Infix (1268:1276)
                Ident r (1268:1269)
                Keyword : (1270:1271)
                Ident Quad (1272:1276)
              Keyword -> (1278:1280)
              Ident p (1281:1282)
        Keyword : (1283:1284)
        Infix (1285:1326)
          Ident Point (1285:1290)
          Keyword -> (1291:1293)
          Infix (1294:1326)
            App (1294:1309)
              Ident act (1294:1297)
              App (1299:1306)
                Ident mul (1299:1302)
                Ident q (1303:1304)
                Ident r (1305:1306)
              Ident p (1308:1309)
            Keyword = (1310:1311)
            App (1312:1326)
              Ident act (1312:1315)
              Ident q (1316:1317)
              App (1319:1326)
                Ident act (1319:1322)
                Ident r (1323:1324)
                Ident p (1325:1326)
      Infix (1367:1457)
        Ident ax/mul_assoc (1367:1379)
        Keyword : (1380:1381)
        Infix (1383:1457)
          Infix (1383:1391)
            Ident q (1383:1384)
            Keyword : (1385:1386)
            Ident Quad (1387:1391)
          Keyword -> (1393:1395)
          Infix (1397:1457)
            Infix (1397:1405)
              Ident r (1397:1398)
              Keyword : (1399:1400)
              Ident Quad (1401:1405)
            Keyword -> (1407:1409)
            Infix (1411:1457)
              Infix (1411:1419)
                Ident s (1411:1412)
                Keyword : (1413:1414)
                Ident Quad (1415:1419)
              Keyword -> (1421:1423)
              Infix (1424:1457)
                App (1424:1439)
                  Ident mul (1424:1427)
                  App (1429:1436)
                    Ident mul (1429:1432)
                    Ident q (1433:1434)
                    Ident r (1435:1436)
                  Ident s (1438:1439)
                Keyword = (1441:1442)
                App (1443:1457)
                  Ident mul (1443:1446)
                  Ident q (1447:1448)
                  App (1450:1457)
                    Ident mul (1450:1453)
                    Ident r (1454:1455)
                    Ident s (1456:1457)

-- elaborated


-- messages

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |             ^

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |                        ^

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |                                   ^

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |                                              ^

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |                                                         ^

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |                                                                    ^

error[E0000]: Unexpected character '\'
30 |       (q0 (make_quad a b c d) = a) /\ 
30 |                                     ^

error[E0000]: Unexpected character '\'
31 |       (q1 (make_quad a b c d) = b) /\ 
31 |                                     ^

error[E0000]: Unexpected character '\'
32 |       (q2 (make_quad a b c d) = c) /\
32 |                                     ^

error[E0000]: Unexpected character '\'
41 |     (act q base0 = q0 q) /\
41 |                           ^

error[E0000]: Unexpected character '\'
42 |     (act q base1 = q1 q) /\
42 |                           ^

error[E0000]: Unexpected character '\'
43 |     (act q base2 = q2 q) /\
43 |                           ^

error[E0102]: Incompatible precedences
48 |   ax/act_mul : (q : Quad) -> (r : Quad) -> p : Point -> act (mul q r) p = act q (act r p)
48 |                                              ^

error[E0208]: unexpected notation for term in synthesizing position: Infix
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
30 |       (q0 (make_quad a b c d) = a) /\ 
30 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
31 |       (q1 (make_quad a b c d) = b) /\ 
31 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
32 |       (q2 (make_quad a b c d) = c) /\
32 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
33 |       (q3 (make_quad a b c d) = d)
33 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
